helm/app/security/peer-authentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "peer-auth-policy"
  namespace: default
spec:
  selector:
    matchLabels:
      app: webapp-deployment
  mtls:
    mode: STRICT
