helm/app/security/destination-rule.yaml
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "dr-enable-mtls-webapp"
  namespace: default
spec:
  host: webapp-deployment-svc.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "dr-enable-mtls-notifier"
  namespace: default
spec:
  host: notifier-webapp-deployment-svc.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "dr-enable-mtls-processor-best"
  namespace: default
spec:
  host: processor-webapp-best-deployment-svc.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "dr-enable-mtls-processor-new"
  namespace: default
spec:
  host: processor-webapp-new-deployment-svc.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "dr-enable-mtls-processor-top"
  namespace: default
spec:
  host: processor-webapp-top-deployment-svc.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "dr-enable-mtls-es"
  namespace: default
spec:
  host: elasticsearch-master.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "dr-enable-mtls-es-headless"
  namespace: default
spec:
  host: elasticsearch-master-headless.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "dr-enable-mtls-prometheus-es"
  namespace: default
spec:
  host: prometheus-prometheus-elasticsearch-exporter.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "dr-enable-mtls-prometheus-kafka"
  namespace: default
spec:
  host: prometheus-prometheus-kafka-exporter.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "dr-enable-mtls-prometheus-pg"
  namespace: default
spec:
  host: prometheus-prometheus-pushgateway.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
